project4/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Classes Class
    3        | Class

    4 Class: T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY
    5      | T_ID T_EXTENDS T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY

    6 ClassBody: Declarations Methods
    7          | Declarations
    8          | Methods
    9          | %empty

   10 Methods: Methods Method
   11        | Method

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY

   13 Parameters: Parameters Parameter
   14           | %empty

   15 Parameter: Type T_ID
   16          | Type T_ID T_COMMA

   17 MethodBody: Declarations Statements Return
   18           | Declarations Statements
   19           | Declarations Return
   20           | Declarations
   21           | Statements Return
   22           | Statements
   23           | Return
   24           | %empty

   25 Declarations: Declarations Declaration
   26             | Declaration

   27 Declaration: Type Ids T_SEMICOLON

   28 Type: T_BOOLEAN
   29     | T_INTEGER
   30     | T_NONE
   31     | T_ID

   32 Ids: Ids T_COMMA T_ID
   33    | T_ID

   34 Statements: Statements Statement
   35           | Statement

   36 Statement: Assignment
   37          | MethodCall T_SEMICOLON
   38          | IfElse
   39          | While
   40          | DoWhile
   41          | Print

   42 Return: T_RETURN Expression T_SEMICOLON

   43 Assignment: T_ID T_ASSIGN Expression T_SEMICOLON
   44           | T_ID T_DOT T_ID T_ASSIGN Expression T_SEMICOLON

   45 MethodCall: T_ID T_OPENPAREN Arguments T_CLOSEDPAREN
   46           | T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEDPAREN

   47 IfElse: T_IF Expression Block
   48       | T_IF Expression Block T_ELSE Block

   49 While: T_WHILE Expression Block

   50 DoWhile: T_DO Block T_WHILE T_OPENPAREN Expression T_CLOSEDPAREN T_SEMICOLON

   51 Block: T_OPENCURLY Statements T_CLOSEDCURLY

   52 Print: T_PRINT Expression T_SEMICOLON

   53 Arguments: Arguments_
   54          | %empty

   55 Arguments_: Arguments T_COMMA Expression
   56           | Expression

   57 Expression: Expression T_PLUS Expression
   58           | Expression T_MINUS Expression
   59           | Expression T_MULT Expression
   60           | Expression T_DIV Expression
   61           | Expression T_GTR Expression
   62           | Expression T_GEQ Expression
   63           | Expression T_EQUALS Expression
   64           | Expression T_AND Expression
   65           | Expression T_OR Expression
   66           | T_NOT Expression
   67           | T_MINUS Expression
   68           | T_ID
   69           | T_ID T_DOT T_ID
   70           | MethodCall
   71           | T_OPENPAREN Expression T_CLOSEDPAREN
   72           | T_NUMBER
   73           | T_TRUE
   74           | T_FALSE
   75           | T_NEW T_ID
   76           | T_NEW T_ID T_OPENPAREN Arguments T_CLOSEDPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_EXTENDS (258) 5
    T_OPENCURLY (259) 4 5 12 51
    T_CLOSEDCURLY (260) 4 5 12 51
    T_COMMA (261) 16 32 55
    T_ARROW (262) 12
    T_RETURN (263) 42
    T_NEW (264) 75 76
    T_DOT (265) 44 46 69
    T_IF (266) 47 48
    T_ELSE (267) 48
    T_DO (268) 50
    T_WHILE (269) 49 50
    T_PRINT (270) 52
    T_ASSIGN (271) 43 44
    T_SEMICOLON (272) 27 37 42 43 44 50 52
    T_TRUE <base_int> (273) 73
    T_FALSE <base_int> (274) 74
    T_OR (275) 65
    T_AND (276) 64
    T_NOT (277) 66
    T_GTR (278) 61
    T_GEQ (279) 62
    T_EQUALS (280) 63
    T_BOOLEAN (281) 28
    T_INTEGER (282) 29
    T_NONE (283) 30
    T_PLUS (284) 57
    T_MINUS (285) 58 67
    T_MULT (286) 59
    T_DIV (287) 60
    T_OPENPAREN (288) 12 45 46 50 71 76
    T_CLOSEDPAREN (289) 12 45 46 50 71 76
    T_ID <base_char_ptr> (290) 4 5 12 15 16 31 32 33 43 44 45 46 68 69 75 76
    T_NUMBER <base_int> (291) 72


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Start <program_ptr> (38)
        on left: 1
        on right: 0
    Classes <class_list_ptr> (39)
        on left: 2 3
        on right: 1 2
    Class <class_ptr> (40)
        on left: 4 5
        on right: 2 3
    ClassBody <class_ptr> (41)
        on left: 6 7 8 9
        on right: 4 5
    Methods <method_list_ptr> (42)
        on left: 10 11
        on right: 6 8 10
    Method <method_ptr> (43)
        on left: 12
        on right: 10 11
    Parameters <parameter_list_ptr> (44)
        on left: 13 14
        on right: 12 13
    Parameter <parameter_ptr> (45)
        on left: 15 16
        on right: 13
    MethodBody <methodbody_ptr> (46)
        on left: 17 18 19 20 21 22 23 24
        on right: 12
    Declarations <declaration_list_ptr> (47)
        on left: 25 26
        on right: 6 7 17 18 19 20 25
    Declaration <declaration_ptr> (48)
        on left: 27
        on right: 25 26
    Type <type_ptr> (49)
        on left: 28 29 30 31
        on right: 12 15 16 27
    Ids <identifier_list_ptr> (50)
        on left: 32 33
        on right: 27 32
    Statements <statement_list_ptr> (51)
        on left: 34 35
        on right: 17 18 21 22 34 51
    Statement <statement_ptr> (52)
        on left: 36 37 38 39 40 41
        on right: 34 35
    Return <returnstatement_ptr> (53)
        on left: 42
        on right: 17 19 21 23
    Assignment <assignment_ptr> (54)
        on left: 43 44
        on right: 36
    MethodCall <methodcall_ptr> (55)
        on left: 45 46
        on right: 37 70
    IfElse <ifelse_ptr> (56)
        on left: 47 48
        on right: 38
    While <while_ptr> (57)
        on left: 49
        on right: 39
    DoWhile <dowhile_ptr> (58)
        on left: 50
        on right: 40
    Block <statement_list_ptr> (59)
        on left: 51
        on right: 47 48 49 50
    Print <print_ptr> (60)
        on left: 52
        on right: 41
    Arguments <expression_list_ptr> (61)
        on left: 53 54
        on right: 45 46 55 76
    Arguments_ <expression_list_ptr> (62)
        on left: 55 56
        on right: 53
    Expression <expression_ptr> (63)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 42 43 44 47 48 49 50 52 55 56 57 58 59 60 61 62 63 64 65 66 67 71


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_ID . T_OPENCURLY ClassBody T_CLOSEDCURLY
    5      | T_ID . T_EXTENDS T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY

    T_EXTENDS    shift, and go to state 5
    T_OPENCURLY  shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    2 Classes: Classes . Class

    T_ID  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    3 Classes: Class .

    $default  reduce using rule 3 (Classes)


State 5

    5 Class: T_ID T_EXTENDS . T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY

    T_ID  shift, and go to state 9


State 6

    4 Class: T_ID T_OPENCURLY . ClassBody T_CLOSEDCURLY

    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 9 (ClassBody)

    ClassBody     go to state 14
    Methods       go to state 15
    Method        go to state 16
    Declarations  go to state 17
    Declaration   go to state 18
    Type          go to state 19


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Classes Class .

    $default  reduce using rule 2 (Classes)


State 9

    5 Class: T_ID T_EXTENDS T_ID . T_OPENCURLY ClassBody T_CLOSEDCURLY

    T_OPENCURLY  shift, and go to state 20


State 10

   28 Type: T_BOOLEAN .

    $default  reduce using rule 28 (Type)


State 11

   29 Type: T_INTEGER .

    $default  reduce using rule 29 (Type)


State 12

   30 Type: T_NONE .

    $default  reduce using rule 30 (Type)


State 13

   12 Method: T_ID . T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY
   31 Type: T_ID .

    T_OPENPAREN  shift, and go to state 21

    $default  reduce using rule 31 (Type)


State 14

    4 Class: T_ID T_OPENCURLY ClassBody . T_CLOSEDCURLY

    T_CLOSEDCURLY  shift, and go to state 22


State 15

    8 ClassBody: Methods .
   10 Methods: Methods . Method

    T_ID  shift, and go to state 23

    $default  reduce using rule 8 (ClassBody)

    Method  go to state 24


State 16

   11 Methods: Method .

    $default  reduce using rule 11 (Methods)


State 17

    6 ClassBody: Declarations . Methods
    7          | Declarations .
   25 Declarations: Declarations . Declaration

    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 7 (ClassBody)

    Methods      go to state 25
    Method       go to state 16
    Declaration  go to state 26
    Type         go to state 19


State 18

   26 Declarations: Declaration .

    $default  reduce using rule 26 (Declarations)


State 19

   27 Declaration: Type . Ids T_SEMICOLON

    T_ID  shift, and go to state 27

    Ids  go to state 28


State 20

    5 Class: T_ID T_EXTENDS T_ID T_OPENCURLY . ClassBody T_CLOSEDCURLY

    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 13

    $default  reduce using rule 9 (ClassBody)

    ClassBody     go to state 29
    Methods       go to state 15
    Method        go to state 16
    Declarations  go to state 17
    Declaration   go to state 18
    Type          go to state 19


State 21

   12 Method: T_ID T_OPENPAREN . Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY

    $default  reduce using rule 14 (Parameters)

    Parameters  go to state 30


State 22

    4 Class: T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY .

    $default  reduce using rule 4 (Class)


State 23

   12 Method: T_ID . T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY

    T_OPENPAREN  shift, and go to state 21


State 24

   10 Methods: Methods Method .

    $default  reduce using rule 10 (Methods)


State 25

    6 ClassBody: Declarations Methods .
   10 Methods: Methods . Method

    T_ID  shift, and go to state 23

    $default  reduce using rule 6 (ClassBody)

    Method  go to state 24


State 26

   25 Declarations: Declarations Declaration .

    $default  reduce using rule 25 (Declarations)


State 27

   33 Ids: T_ID .

    $default  reduce using rule 33 (Ids)


State 28

   27 Declaration: Type Ids . T_SEMICOLON
   32 Ids: Ids . T_COMMA T_ID

    T_COMMA      shift, and go to state 31
    T_SEMICOLON  shift, and go to state 32


State 29

    5 Class: T_ID T_EXTENDS T_ID T_OPENCURLY ClassBody . T_CLOSEDCURLY

    T_CLOSEDCURLY  shift, and go to state 33


State 30

   12 Method: T_ID T_OPENPAREN Parameters . T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY
   13 Parameters: Parameters . Parameter

    T_BOOLEAN      shift, and go to state 10
    T_INTEGER      shift, and go to state 11
    T_NONE         shift, and go to state 12
    T_CLOSEDPAREN  shift, and go to state 34
    T_ID           shift, and go to state 35

    Parameter  go to state 36
    Type       go to state 37


State 31

   32 Ids: Ids T_COMMA . T_ID

    T_ID  shift, and go to state 38


State 32

   27 Declaration: Type Ids T_SEMICOLON .

    $default  reduce using rule 27 (Declaration)


State 33

    5 Class: T_ID T_EXTENDS T_ID T_OPENCURLY ClassBody T_CLOSEDCURLY .

    $default  reduce using rule 5 (Class)


State 34

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN . T_ARROW Type T_OPENCURLY MethodBody T_CLOSEDCURLY

    T_ARROW  shift, and go to state 39


State 35

   31 Type: T_ID .

    $default  reduce using rule 31 (Type)


State 36

   13 Parameters: Parameters Parameter .

    $default  reduce using rule 13 (Parameters)


State 37

   15 Parameter: Type . T_ID
   16          | Type . T_ID T_COMMA

    T_ID  shift, and go to state 40


State 38

   32 Ids: Ids T_COMMA T_ID .

    $default  reduce using rule 32 (Ids)


State 39

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW . Type T_OPENCURLY MethodBody T_CLOSEDCURLY

    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 35

    Type  go to state 41


State 40

   15 Parameter: Type T_ID .
   16          | Type T_ID . T_COMMA

    T_COMMA  shift, and go to state 42

    $default  reduce using rule 15 (Parameter)


State 41

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type . T_OPENCURLY MethodBody T_CLOSEDCURLY

    T_OPENCURLY  shift, and go to state 43


State 42

   16 Parameter: Type T_ID T_COMMA .

    $default  reduce using rule 16 (Parameter)


State 43

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY . MethodBody T_CLOSEDCURLY

    T_RETURN   shift, and go to state 44
    T_IF       shift, and go to state 45
    T_DO       shift, and go to state 46
    T_WHILE    shift, and go to state 47
    T_PRINT    shift, and go to state 48
    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 49

    $default  reduce using rule 24 (MethodBody)

    MethodBody    go to state 50
    Declarations  go to state 51
    Declaration   go to state 18
    Type          go to state 19
    Statements    go to state 52
    Statement     go to state 53
    Return        go to state 54
    Assignment    go to state 55
    MethodCall    go to state 56
    IfElse        go to state 57
    While         go to state 58
    DoWhile       go to state 59
    Print         go to state 60


State 44

   42 Return: T_RETURN . Expression T_SEMICOLON

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 70


State 45

   47 IfElse: T_IF . Expression Block
   48       | T_IF . Expression Block T_ELSE Block

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 71


State 46

   50 DoWhile: T_DO . Block T_WHILE T_OPENPAREN Expression T_CLOSEDPAREN T_SEMICOLON

    T_OPENCURLY  shift, and go to state 72

    Block  go to state 73


State 47

   49 While: T_WHILE . Expression Block

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 74


State 48

   52 Print: T_PRINT . Expression T_SEMICOLON

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 75


State 49

   31 Type: T_ID .
   43 Assignment: T_ID . T_ASSIGN Expression T_SEMICOLON
   44           | T_ID . T_DOT T_ID T_ASSIGN Expression T_SEMICOLON
   45 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEDPAREN
   46           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEDPAREN

    T_DOT        shift, and go to state 76
    T_ASSIGN     shift, and go to state 77
    T_OPENPAREN  shift, and go to state 78

    $default  reduce using rule 31 (Type)


State 50

   12 Method: T_ID T_OPENPAREN Parameters T_CLOSEDPAREN T_ARROW Type T_OPENCURLY MethodBody . T_CLOSEDCURLY

    T_CLOSEDCURLY  shift, and go to state 79


State 51

   17 MethodBody: Declarations . Statements Return
   18           | Declarations . Statements
   19           | Declarations . Return
   20           | Declarations .
   25 Declarations: Declarations . Declaration

    T_RETURN   shift, and go to state 44
    T_IF       shift, and go to state 45
    T_DO       shift, and go to state 46
    T_WHILE    shift, and go to state 47
    T_PRINT    shift, and go to state 48
    T_BOOLEAN  shift, and go to state 10
    T_INTEGER  shift, and go to state 11
    T_NONE     shift, and go to state 12
    T_ID       shift, and go to state 49

    $default  reduce using rule 20 (MethodBody)

    Declaration  go to state 26
    Type         go to state 19
    Statements   go to state 80
    Statement    go to state 53
    Return       go to state 81
    Assignment   go to state 55
    MethodCall   go to state 56
    IfElse       go to state 57
    While        go to state 58
    DoWhile      go to state 59
    Print        go to state 60


State 52

   21 MethodBody: Statements . Return
   22           | Statements .
   34 Statements: Statements . Statement

    T_RETURN  shift, and go to state 44
    T_IF      shift, and go to state 45
    T_DO      shift, and go to state 46
    T_WHILE   shift, and go to state 47
    T_PRINT   shift, and go to state 48
    T_ID      shift, and go to state 82

    $default  reduce using rule 22 (MethodBody)

    Statement   go to state 83
    Return      go to state 84
    Assignment  go to state 55
    MethodCall  go to state 56
    IfElse      go to state 57
    While       go to state 58
    DoWhile     go to state 59
    Print       go to state 60


State 53

   35 Statements: Statement .

    $default  reduce using rule 35 (Statements)


State 54

   23 MethodBody: Return .

    $default  reduce using rule 23 (MethodBody)


State 55

   36 Statement: Assignment .

    $default  reduce using rule 36 (Statement)


State 56

   37 Statement: MethodCall . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 85


State 57

   38 Statement: IfElse .

    $default  reduce using rule 38 (Statement)


State 58

   39 Statement: While .

    $default  reduce using rule 39 (Statement)


State 59

   40 Statement: DoWhile .

    $default  reduce using rule 40 (Statement)


State 60

   41 Statement: Print .

    $default  reduce using rule 41 (Statement)


State 61

   75 Expression: T_NEW . T_ID
   76           | T_NEW . T_ID T_OPENPAREN Arguments T_CLOSEDPAREN

    T_ID  shift, and go to state 86


State 62

   73 Expression: T_TRUE .

    $default  reduce using rule 73 (Expression)


State 63

   74 Expression: T_FALSE .

    $default  reduce using rule 74 (Expression)


State 64

   66 Expression: T_NOT . Expression

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 87


State 65

   67 Expression: T_MINUS . Expression

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 88


State 66

   71 Expression: T_OPENPAREN . Expression T_CLOSEDPAREN

    T_NEW        shift, and go to state 61
    T_TRUE       shift, and go to state 62
    T_FALSE      shift, and go to state 63
    T_NOT        shift, and go to state 64
    T_MINUS      shift, and go to state 65
    T_OPENPAREN  shift, and go to state 66
    T_ID         shift, and go to state 67
    T_NUMBER     shift, and go to state 68

    MethodCall  go to state 69
    Expression  go to state 89


State 67

   45 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEDPAREN
   46           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEDPAREN
   68 Expression: T_ID .
   69           | T_ID . T_DOT T_ID

    T_DOT        shift, and go to state 90
    T_OPENPAREN  shift, and go to state 78

    $default  reduce using rule 68 (Expression)


State 68

   72 Expression: T_NUMBER .

    $default  reduce using rule 72 (Expression)


State 69

   70 Expression: MethodCall .

    $default  reduce using rule 70 (Expression)


State 70

   42 Return: T_RETURN Expression . T_SEMICOLON
   57 Expression: Expression . T_PLUS Expression
   58           | Expression . T_MINUS Expression
   59           | Expression . T_MULT Expression
   60           | Expression . T_DIV Expression
   61           | Expression . T_GTR Expression
   62           | Expression . T_GEQ Expression
   63           | Expression . T_EQUALS Expression
   64           | Expression . T_AND Expression
   65           | Expression . T_OR Expression

    T_SEMICOLON  shift, and go to state 91
    T_OR         shift, and go to state 92
    T_AND        shift, and go to state 93
    T_GTR        shift, and go to state 94
    T_GEQ        shift, and go to state 95
    T_EQUALS     shift, and go to state 96
    T_PLUS       shift, and go to state 97
    T_MINUS      shift, and go to state 98
    T_MULT       shift, and go to state 99
    T_DIV        shift, and go to state 100


State 71

   47 IfElse: T_IF Expression . Block
   48       | T_IF Expression . Block T_ELSE Block
   57 Expression: Expression . T_PLUS Expression
   58           | Expression . T_MINUS Expression
   59           | Expression . T_MULT Expression
   60           | Expression . T_DIV Expression
   61           | Expression . T_GTR Expression
   62           | Expression . T_GEQ Expression
   63           | Expression . T_EQUALS Expression
   64           | Expression . T_AND Expression
   65           | Expression . T_OR Expression
